Refactored HttpRequest into a more useful construct in order to facilitate ongoing work for SHINDIG-523 and SHINDIG-517.
This isn't really much of a change, it just touches a lot of files since it replaces most usage of java.net.URI.

Some interfaces at the edge of this code may need to be modified slightly, especially if they looked at HttpRequest.getUri directly. We're now using org.apache.shindig.common.uri.Uri instead of java.net.URI. If existing code still wants a java.net.URI, some new utility methods have been added to Uri to facilitate converstion.

Much more work remains to be done in the rendering and network request pipeline. The next step will be updating HttpResponse objects along the same lines as HttpRequest (with some notable significant differences, since responses must be immutable).  Additional cleanup to remove remaining use of java.net.URI would also be good, though not critical.



git-svn-id: https://svn.apache.org/repos/asf/incubator/shindig/trunk@687214 13f79535-47bb-0310-9956-ffa450edef68